--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "jsx": "react",
+    "jsxFactory": "Snabbdom.createElement",
     "lib": [
       "dom",
       "es2015",
@@ -17,6 +18,10 @@
     "noImplicitThis": true,
     "sourceMap": true,
     "strictNullChecks": true,
-    "target": "es5"
+    "target": "es5",
+
+    "typeRoots": [
+      "./types"
+    ]
   }
 }
