--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "private": true,
   "workspaces": [
     "modules/*"
-  ]
+  ],
+  "dependencies": {
+    "tslint": "^5.9.1",
+    "tslint-config-airbnb": "^5.7.0"
+  }
 }
