--- a/modules/prerender/package.json
+++ b/modules/prerender/package.json
@@ -1,5 +1,10 @@
 {
   "name": "prerender",
   "version": "0.1.0",
-  "main": "index.ts"
+  "main": "index.ts",
+  "dependencies": {
+    "@types/mz": "^0.0.32",
+    "mkdirp-promise": "^5.0.1",
+    "mz": "^2.7.0"
+  }
 }
