--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: true
-  local-dir: local
+  local-dir: public
   on:
     branch: master
