--- a/modules/website/package.json
+++ b/modules/website/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "main": "index.tsx",
   "dependencies": {
+    "@types/core-js": "^0.9.46",
     "@types/history": "^4.6.2",
     "callbag-basics": "^2.0.1",
+    "core-js": "^2.5.3",
     "history": "^4.7.2",
     "snabbdom": "^0.7.1",
     "snabbdom-pragma": "^2.6.0",
