Move css from js bundle into file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "lib": [
       "dom",
       "es2015",
-      "es2015.promise"
+      "es2015.promise",
+      "es2016.array.include"
     ],
     "moduleResolution": "node",
     "module": "commonjs",
