--- a/modules/prerender/package.json
+++ b/modules/prerender/package.json
@@ -4,7 +4,9 @@
   "main": "index.ts",
   "dependencies": {
     "@types/mz": "^0.0.32",
+    "@types/serialize-javascript": "^1.3.2",
     "mkdirp-promise": "^5.0.1",
-    "mz": "^2.7.0"
+    "mz": "^2.7.0",
+    "serialize-javascript": "^1.4.0"
   }
 }
